# edu-agent

./: .gitignore  README.md  pyproject.toml
docs/: eval.md  进度.md
edu_agent/: __init__.py
edu_agent/agent/: __init__.py  demo_policy.py  graph.py  prompts.py
edu_agent/engine/: __init__.py  base.py  mock.py  openai_compat.py
edu_agent/eval/: __init__.py  harness.py  metrics.py  oracle.py  tasks.py  tasks_derived.py
edu_agent/mcp/: __init__.py  client.py  server.py
edu_agent/tools/: __init__.py  ai_tools.py  analysis_tools.py  kg_tools.py  ops_tools.py  query_tools.py  registry.py  schemas.py
scripts/: agent_demo.py  debug_trace.py  demo_trajectory.py  dump_trajectories.py  eval_ablation.py  eval_demo.py  eval_subset.py  mcp_demo.py
tests/: test_agent.py  test_eval.py  test_mcp.py  test_tools.py
