[project]
name = "edu-agent"
version = "0.1.0"
description = "全域教学教务多工具 Agent —— mirror 真实在线教学平台的工具形态，用自微调+量化的 Qwen3-14B 当工具调用引擎"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "zhangxiaobina", email = "ruibin834@gmail.com" }]

# 核心 数据层 + 工具层 仅用标准库（sqlite3 / 纯 Python Dijkstra），零依赖、可离线复现。
# 下列依赖供 Agent 编排 / 引擎 / RAG / MCP 层（后续接入）。
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "openai>=1.40.0",        # 走 vLLM 的 OpenAI 兼容端点 / 通义千问兼容端点
    "pydantic>=2.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
rag = ["langchain-community>=0.3.0"]
dev = ["pytest>=8.0", "ruff>=0.6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["edu_agent"]

[tool.ruff]
line-length = 100
target-version = "py310"
